--- a/AzureFunctions/.gitignore
+++ b/AzureFunctions/.gitignore
@@ -1,15 +1,16 @@
-
 bin
 obj
 csx
 .vs
 edge
 Publish
+.vscode
 
 *.user
 *.suo
 *.cscfg
 *.Cache
+project.lock.json
 
 /packages
 /TestResults
@@ -19,3 +20,4 @@ Publish
 /secrets
 /data
 .secrets
+appsettings.json
